[project]
name = "blive-queue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "brotli>=1.2.0",
    "loguru>=0.7.3",
    "nicegui>=3.14.0",
    "pillow>=12.3.0",
    "pure-protobuf>=3.1.5",
    "pywebview==6.2",
    "qrcode>=8.2",
    "requests>=2.34.2",
    "tomlkit>=0.15.0",
    "yarl>=1.24.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
